Part_2/822_p4.err
/mnt/home/atiksere/.bashrc: line 33: dirname: command not found
/mnt/home/atiksere/.bashrc: line 34: dirname: command not found
Lmod Warning: Input module (gcc) not found, using module: GCC . . . (ICER v.) 


Lmod Warning: Input module (openmpi) not found, using module: OpenMPI . . .
(ICER v.) 


Lmod Warning: Input module (hdf5) not found, using module: HDF5 . . . (ICER
v.) 


Lmod Warning: Input module (python) not found, using module: Python . . .
(ICER v.) 


hello.cpp: In function ‘int main(int, char**)’:
hello.cpp:9:57: error: ‘provided’ was not declared in this scope
     MPI_Init_thread(&argc, &argv, MPI_THREAD_FUNNELED, &provided);
                                                         ^~~~~~~~
--------------------------------------------------------------------------
There are not enough slots available in the system to satisfy the 2 slots
that were requested by the application:
  ./hello

Either request fewer slots for your application, or make more slots available
for use.
--------------------------------------------------------------------------
